--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,22 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.7.2"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
     // Retrofit converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     // Gson
-    implementation "com.google.code.gson:gson:2.8.5"
+    implementation "com.google.code.gson:gson:2.8.6"
+
+    // viewModel and lifeData
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
+
+
+
 }
