Datos mostrados, consumiendo api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures{
+        viewBinding true
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -55,6 +59,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    // Databinding
+    implementation 'com.android.databinding:viewbinding:4.0.1'
+
+    // Picaso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
