--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,16 @@ android {
     }
     buildFeatures{
         viewBinding true
-        dataBinding true
+    }
+
+    flavorDimensions 'app'
+    productFlavors {
+        local {
+            dimension 'app'
+        }
+        dev {
+            dimension 'app'
+        }
     }
 }
 
@@ -60,8 +69,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    // Databinding
-    implementation 'com.android.databinding:viewbinding:4.0.1'
+
 
     // Picaso
     implementation 'com.squareup.picasso:picasso:2.71828'
